force-app/main/default/objects/Store__c/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <label>Items</label>
    <length>30</length>
    <type>Text</type>
</CustomField>