force-app/main/default/objects/Store__c/fields/Store_Contact__c.field-meta.xml
<CustomField>
    <fullName>Store_Contact__c</fullName>
    <label>Store Contact</label>
    <type>Phone</type>
</CustomField>