force-app/main/default/objects/Store__c/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <label>Store Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>